K1J-1139: Add support for structured address (#6)
Co-authored-by: Jacob Almqvist <jacob.almqvist@soprasteria.com>
Co-authored-by: Daniel Jönsson <daniel.joensson@soprasteria.com>